--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "core-js": "^2.6.5",
+    "google-maps-api-loader": "^1.1.1",
     "vue": "^2.6.10"
   },
   "devDependencies": {
