--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "core-js": "^2.6.5",
     "google-maps-api-loader": "^1.1.1",
-    "vue": "^2.6.10"
+    "vue": "^2.6.10",
+    "vue-json-pretty": "^1.6.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.8.0",
